--- a/templates/inlined-foot-template.html
+++ b/templates/inlined-foot-template.html
@@ -3,6 +3,8 @@
     <link rel="stylesheet" type="text/css" href="/static/css/default.css">
     <link rel="stylesheet" type="text/css" href="/static/css/links.css">
 
+    <!-- JS library with utility functions used in rest of code -->
+    <script src="/static/js/utility.js" defer></script>
     <!-- JS library for spawning popups -->
     <script src="/static/js/popups.js" defer></script>
     <script src="/static/js/popins.js" defer></script>
