--- a/includes/inlined-foot.html
+++ b/includes/inlined-foot.html
@@ -3,6 +3,8 @@
     <link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1668368463">
     <link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1668211384">
 
+    <!-- JS library with utility functions used in rest of code -->
+    <script src="/static/js/utility.js?v=1668375271" defer></script>
     <!-- JS library for spawning popups -->
     <script src="/static/js/popups.js?v=1661729472" defer></script>
     <script src="/static/js/popins.js?v=1660759392" defer></script>
@@ -16,8 +18,8 @@
     <!-- Misc JS: 1. Collapsed sections: insert a toggle to expand them; 2. cover source-code block listings too (for large R sections especially); 3. type setting stuff -->
 	<script src="/static/js/Hyphenopoly_Loader.js?v=1650818540" defer></script>
     <script src="/static/js/typography.js?v=1667673751" defer></script>
-    <script src="/static/js/rewrite.js?v=1668369083" defer></script>
-    <script src="/static/js/transclude.js?v=1668210771" defer></script>
+    <script src="/static/js/rewrite.js?v=1668374348" defer></script>
+    <script src="/static/js/transclude.js?v=1668372105" defer></script>
     <script src="/static/js/collapse.js?v=1668023821" defer></script>
 
     <!-- Dark Mode theme switcher (lets users toggle between regular black-on-white CSS, and dark mode) -->
