--- a/templates/default.html
+++ b/templates/default.html
@@ -130,7 +130,7 @@
         </section>
         $if(similarsYes)$<section id="similar-links-section" class="level1">
           <h1><a href="#similar-links-section" title="Link to section: § 'Similar Links'">Similar Links</a></h1>
-          <a id="similars" class="similars" href="/metadata/annotations/similars/$escapedURL$" title="Similar links for this link (by text embedding). Lazily-transcluded version at footer of page for easier scrolling." class="include-unwrap include-identify-not">similar</a>
+          <a id="similars" href="/metadata/annotations/similars/$escapedURL$" title="Similar links for this link (by text embedding). Lazily-transcluded version at footer of page for easier scrolling." class="similars include">similar</a>
           </section>$endif$
           $endif$
         </div> <!-- NOTE: unmatched, because it closes the opening div from the hakyll.hs $$body$$ Pandoc template -->
