Fix minor CSS bug with annotations in link-bibliographies in pop-frames

--- a/css/default.css
+++ b/css/default.css
@@ -4925,7 +4925,7 @@ section.highlight-fading::before {
 .annotation .data-field.annotation-abstract:empty {
     display: none;
 }
-.annotation .data-field.annotation-abstract:not(blockquote) .page-description-annotation::before {
+.annotation .data-field.annotation-abstract:not(blockquote) > .page-description-annotation::before {
     content: "";
     display: block;
     overflow: auto;
