default.html: link-bib: tweak with header because fragments now

--- a/templates/default.html
+++ b/templates/default.html
@@ -126,7 +126,8 @@
           <a id="backlinks" href="/metadata/annotations/backlinks/$escapedURL$" title="Reverse citations/backlinks for this page (the list of other pages which link to this page)." class="backlinks include">backlinks</a>
         </section>$endif$
         <section id="link-bibliography" class="level1">
-          <a id="link-bibliography-link-footer-transclusion" href="/metadata/annotations/link-bibliography/$escapedURL$" title="Bibliography of links cited in this page (forward citations). Lazily-transcluded version at footer of page for easier scrolling." class="include-unwrap include-identify-not">Link Bibliography</a>
+          <h1><a href="#link-bibliography" title="Link to section: § 'Link Bibliography'">Link Bibliography</a></h1>
+          <a id="link-bibliography-link-footer-transclusion" href="/metadata/annotations/link-bibliography/$escapedURL$" title="Bibliography of links cited in this page (forward citations). Lazily-transcluded version at footer of page for easier scrolling." class="include link-bibliography">Link Bibliography</a>
         </section>
         $if(similarsYes)$<section id="similar-links-section" class="level1">
           <h1><a href="#similar-links-section" title="Link to section: § 'Similar Links'">Similar Links</a></h1>
