--- a/css/default.css
+++ b/css/default.css
@@ -5104,32 +5104,32 @@ section.highlight-fading::before {
 	(rather than pop-framed) annotations.
  */
 
-.include-wrapper-block.annotation .collapse.aux-links-container {
+.annotation .collapse.aux-links-container {
     border-top: 1px solid var(--GW-TOC-border-color);
 }
-.include-wrapper-block.annotation .collapse.aux-links-container:not(:last-child) {
+.annotation .collapse.aux-links-container:not(:last-child) {
     border-bottom: 1px solid var(--GW-TOC-border-color);
 }
-.include-wrapper-block.annotation p + .collapse.aux-links-container {
+.annotation p + .collapse.aux-links-container {
     margin-top: 1.25em;
 }
-.include-wrapper-block.annotation .collapse.aux-links-container + .collapse.aux-links-container {
+.annotation .collapse.aux-links-container + .collapse.aux-links-container {
     margin-top: 1.5em;
 }
-.include-wrapper-block.annotation .TOC + .collapse.aux-links-container {
+.annotation .TOC + .collapse.aux-links-container {
     margin-top: 0.75em;
 }
 
-.include-wrapper-block.annotation .collapse.aux-links-container .aux-links-append {
+.annotation .collapse.aux-links-container .aux-links-append {
 	padding-left: 0;
 }
 
-.include-wrapper-block.annotation :not(section).collapse.aux-links-container:not(.expanded) > .disclosure-button::before {
+.annotation :not(section).collapse.aux-links-container:not(.expanded) > .disclosure-button::before {
     content: "Click to expand";
     width: 10rem;
     padding: 1rem 3rem 0.75rem 0;
 }
-.include-wrapper-block.annotation :not(section).collapse.aux-links-container:not(.expanded) > .disclosure-button::after {
+.annotation :not(section).collapse.aux-links-container:not(.expanded) > .disclosure-button::after {
     display: none;
 }
 
