--- a/templates/include/annotation-blockquote-inside.tmpl
+++ b/templates/include/annotation-blockquote-inside.tmpl
@@ -7,15 +7,13 @@
 		   <[IF linkTarget]>target="<{linkTarget}>"<[IFEND]>
 		   <{titleLinkIconMetadata}>
 			   ><{fullTitleHTML}></a><[IF dataSourceClass]>:<[IFEND]>
-		<[IF originalURL]><span class="originalURL">
-			[<a
-				 title="Link to original URL for <{titleText}>"
-				 href="<{originalURL}>"
-				 <[IF2 linkTarget]>target="<{linkTarget}>"<[IF2END]>
-				 alt="Original URL for this archived link; may be broken."
-					 ><{originalURLText}></a>]
-		</span>
-		<[IFEND]><[IF authorDateAux]>, <{authorDateAux}>:<[IFEND]>
+		<[IF originalURL]><span class="originalURL">[<a
+			 title="Link to original URL for <{titleText}>"
+			 href="<{originalURL}>"
+			 <[IF2 linkTarget]>target="<{linkTarget}>"<[IF2END]>
+			 alt="Original URL for this archived link; may be broken."
+				 ><{originalURLText}></a
+		>]</span><[IFEND]><[IF authorDateAux]>, <{authorDateAux}>:<[IFEND]>
 	</p>
 	<[IF abstract]>
 	<blockquote class="data-field annotation-abstract"><{abstract}></blockquote>
