--- a/templates/include/annotation-blockquote-outside.tmpl
+++ b/templates/include/annotation-blockquote-outside.tmpl
@@ -7,16 +7,13 @@
 		   <[IF linkTarget]>target="<{linkTarget}>"<[IFEND]>
 		   <{titleLinkIconMetadata}>
 			   ><{titleHTML}></a>
-		<[IF originalURL]>
-		<span class="originalURL">
-			[<a
-				 title="Link to original URL for <{titleText}>"
-				 href="<{originalURL}>"
-				 <[IF2 linkTarget]>target="<{linkTarget}>"<[IF2END]>
-				 alt="Original URL for this archived link; may be broken."
-					 ><{originalURLText}></a>]
-		</span>
-		<[IFEND]>
+		<[IF originalURL]><span class="originalURL">[<a
+			 title="Link to original URL for <{titleText}>"
+			 href="<{originalURL}>"
+			 <[IF2 linkTarget]>target="<{linkTarget}>"<[IF2END]>
+			 alt="Original URL for this archived link; may be broken."
+				 ><{originalURLText}></a
+		>]</span><[IFEND]>
 	</p>
 	<[IF authorDateAux]>
 	<p class="data-field author-date-aux"><{authorDateAux}></p>
