--- a/templates/include/annotation-blockquote-inside.tmpl
+++ b/templates/include/annotation-blockquote-inside.tmpl
@@ -1,4 +1,4 @@
-<div class="annotation <{dataSourceClass}>">
+<div class="annotation<{annotationClassSuffix}> <{dataSourceClass}>">
 	<p class="data-field title <[IF authorDateAux]>author-date-aux<[IFEND]>">
 		<a 
 		   class="<{titleLinkClass}>"
