--- a/templates/include/annotation-blockquote-not.tmpl
+++ b/templates/include/annotation-blockquote-not.tmpl
@@ -1,4 +1,4 @@
-<div class="annotation <{dataSourceClass}>">
+<div class="annotation<{annotationClassSuffix}> <{dataSourceClass}>">
 	<p class="data-field title">
 		<a 
 		   class="<{titleLinkClass}>"
