--- a/templates/include/annotation-blockquote-outside.tmpl
+++ b/templates/include/annotation-blockquote-outside.tmpl
@@ -1,4 +1,4 @@
-<blockquote class="annotation <{dataSourceClass}>">
+<blockquote class="annotation<{annotationClassSuffix}> <{dataSourceClass}>">
 	<p class="data-field title">
 		<a 
 		   class="<{titleLinkClass}>"
