--- a/templates/include/annotation-blockquote-inside.tmpl
+++ b/templates/include/annotation-blockquote-inside.tmpl
@@ -13,7 +13,7 @@
 			 <[IF2 linkTarget]>target="<{linkTarget}>"<[IF2END]>
 			 alt="Original URL for this archived link; may be broken."
 				 ><{originalURLText}></a
-		>]</span><[IFEND]><[IF authorDateAux]>, <{authorDateAux}>:<[IFEND]>
+		>]</span><[IFEND]><[IF authorDateAux]>, <{authorDateAux}><[IF2 abstract]>:<[IF2END]><[IFEND]>
 	</p>
 	<[IF abstract]>
 	<blockquote class="data-field annotation-abstract"><{abstract}></blockquote>
