Rewrite of .subsup CSS

--- a/css/default.css
+++ b/css/default.css
@@ -2269,23 +2269,21 @@ p {
 /*  SUBSCRIPT+SUPERSCRIPT (necessary for inflation adjuster, and other math)
  */
 .subsup {
-    display: inline-block;
-    margin-left: 0.1em;
+    margin-left: 0.15em;
     margin-right: 0.1em;
-    text-indent: initial; /* override the `p + p { text-indent: 2.5em; }` */
+    text-indent: 0; /* override the `p + p { text-indent: 2.5em; }` */
+    display: inline-flex;
+    flex-flow: column;
+    align-items: flex-end;
+    vertical-align: text-bottom;
+    position: relative;
+    bottom: -0.1em;
 }
 .subsup sup,
 .subsup sub {
     position: relative;
-    display: block;
     font-size: 0.7em;
-    line-height: 0.75;
-}
-.subsup sup {
-    top: 0.25em;
-}
-.subsup sub {
-    bottom: -0.15em;
+    line-height: 1;
 }
 /*  Make sure that adjusted prices move as a block: no breaking in the middle between the price & sup/sub; this works better than trying to use no-break Unicode entities
     */
