Add expression support to templating system

--- a/templates/include/annotation-blockquote-outside.tmpl
+++ b/templates/include/annotation-blockquote-outside.tmpl
@@ -6,14 +6,17 @@
 		   href="<{titleLinkHref}>"
 		   <[IF linkTarget]>target="<{linkTarget}>"<[IFEND]>
 		   <{titleLinkIconMetadata}>
-			   ><{titleHTML}></a>
-		<[IF originalURL]><span class="originalURL">[<a
+			   ><{titleHTML}></a>\
+
+		<[IF originalURL]>
+		<span class="originalURL">[<a
 			 title="Link to original URL for <{titleText}>"
 			 href="<{originalURL}>"
 			 <[IF2 linkTarget]>target="<{linkTarget}>"<[IF2END]>
 			 alt="Original URL for this archived link; may be broken."
 				 ><{originalURLText}></a
-		>]</span><[IFEND]>
+		>]</span>
+		<[IFEND]>
 	</p>
 	<[IF authorDateAux]>
 	<p class="data-field author-date-aux"><{authorDateAux}></p>
