--- a/templates/include/annotation-blockquote-inside.tmpl
+++ b/templates/include/annotation-blockquote-inside.tmpl
@@ -6,14 +6,19 @@
 		   href="<{titleLinkHref}>"
 		   <[IF linkTarget]>target="<{linkTarget}>"<[IFEND]>
 		   <{titleLinkIconMetadata}>
-			   ><{fullTitleHTML}></a><[IF dataSourceClass]>:<[IFEND]>
-		<[IF originalURL]><span class="originalURL">[<a
+			   ><{fullTitleHTML}></a>\
+		<[IF abstract & ![ originalURL | authorDateAux ] ]>:<[IFEND]>\
+
+		<[IF originalURL]>
+		<span class="originalURL">[<a
 			 title="Link to original URL for <{titleText}>"
 			 href="<{originalURL}>"
 			 <[IF2 linkTarget]>target="<{linkTarget}>"<[IF2END]>
 			 alt="Original URL for this archived link; may be broken."
-				 ><{originalURLText}></a
-		>]</span><[IFEND]><[IF authorDateAux]>, <{authorDateAux}><[IF2 abstract]>:<[IF2END]><[IFEND]>
+				 ><{originalURLText}></a>]</span>
+		<[IFEND]>\
+
+		<[IF authorDateAux]>, <{authorDateAux}><[IF2 abstract]>:<[IF2END]><[IFEND]>
 	</p>
 	<[IF abstract]>
 	<blockquote class="data-field annotation-abstract"><{abstract}></blockquote>
