--- a/templates/inlined-foot-template.html
+++ b/templates/inlined-foot-template.html
@@ -10,6 +10,7 @@
     <script src="/static/js/popins.js" defer></script>
     <!-- JS library for annotating hyperlinks with introduction/summary from various sources; not lazy-loaded as (almost) all pages have popups -->
     <script src="/static/js/annotations.js" defer></script>
+    <script src="/static/js/content.js" defer></script>
     <script src="/static/js/extracts.js" defer></script>
     <script src="/static/js/extracts-annotations.js" defer></script>
     <script src="/static/js/extracts-content.js" defer></script>
