--- a/includes/inlined-foot.html
+++ b/includes/inlined-foot.html
@@ -1,25 +1,26 @@
     <!-- Load the rest of the CSS. Note that we do not need any JS hacks here: HTML allows <link> stylesheets in the body: https://html.spec.whatwg.org/multipage/links.html#body-ok https://jakearchibald.com/2016/link-in-body/ -->
     <link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1655420134">
-    <link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1669146150">
+    <link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1669333064">
     <link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1668975705">
 
     <!-- JS library with utility functions used in rest of code -->
-    <script src="/static/js/utility.js?v=1668979252" defer></script>
+    <script src="/static/js/utility.js?v=1669242981" defer></script>
     <!-- JS library for spawning popups -->
-    <script src="/static/js/popups.js?v=1668980711" defer></script>
-    <script src="/static/js/popins.js?v=1660759392" defer></script>
+    <script src="/static/js/popups.js?v=1669271658" defer></script>
+    <script src="/static/js/popins.js?v=1669269070" defer></script>
     <!-- JS library for annotating hyperlinks with introduction/summary from various sources; not lazy-loaded as (almost) all pages have popups -->
-    <script src="/static/js/annotations.js?v=1669057133" defer></script>
-    <script src="/static/js/extracts.js?v=1668983062" defer></script>
-    <script src="/static/js/extracts-annotations.js?v=1669101921" defer></script>
-    <script src="/static/js/extracts-content.js?v=1668921210" defer></script>
+    <script src="/static/js/annotations.js?v=1669271203" defer></script>
+    <script src="/static/js/content.js?v=1669340952" defer></script>
+    <script src="/static/js/extracts.js?v=1669339657" defer></script>
+    <script src="/static/js/extracts-annotations.js?v=1669239244" defer></script>
+    <script src="/static/js/extracts-content.js?v=1669339668" defer></script>
     <script src="/static/js/extracts-options.js?v=1661354879" defer></script>
 
     <!-- Misc JS: 1. Collapsed sections: insert a toggle to expand them; 2. cover source-code block listings too (for large R sections especially); 3. type setting stuff -->
 	<script src="/static/js/Hyphenopoly_Loader.js?v=1650818540" defer></script>
     <script src="/static/js/typography.js?v=1667673751" defer></script>
-    <script src="/static/js/rewrite.js?v=1669110891" defer></script>
-    <script src="/static/js/transclude.js?v=1669159029" defer></script>
+    <script src="/static/js/rewrite.js?v=1669340177" defer></script>
+    <script src="/static/js/transclude.js?v=1669272550" defer></script>
     <script src="/static/js/collapse.js?v=1669062841" defer></script>
 
     <!-- Dark Mode theme switcher (lets users toggle between regular black-on-white CSS, and dark mode) -->
